--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>etch-a-sketch</title>
+    <script src ="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -11,14 +12,16 @@
     <h1> etch-a-sketch </h1>
     <div class = "header">
         <h6> Select the size </h6>
-        <button id = "popup" class="btn btn-danger">Select</button>
+        <button id = "popup" class="btn btn-danger" onclick="getSize()">Select</button>
     </div>
+    <p id = "message"></p>
     <div class = "board"></div>
     <div class = "footer">
         <button class="btn btn-dark"> Black  </button>
         <button class="btn btn-info"> Random </button>
         <button class="btn btn-primary"> Reset </button>
     </div>
-
+    
 </body>
+  
 </html>
