--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <h6> Select the size </h6>
         <button id = "popup" class="btn btn-danger">Select</button>
     </div>
+
+
+        
     <p id = "message"></p>
+    <p id = "draw"></p>
     <div class = "board"></div>
     <div class = "footer">
         <button class="btn btn-dark" onclick="setColor('black')"> Black  </button>
